--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 ---
-script: "bundle exec rubytest -Itest -Ilib test/"
+script: "bundle exec rubytest -Itest -Ilib test/test*"
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
-  - rbx-18mode
-  - rbx-19mode
-  - jruby-18mode
-  - jruby-19mode
+  #- rbx-18mode
+  #- rbx-19mode
+  #- jruby-18mode
+  #- jruby-19mode
 
