--- a/meta/description
+++ b/meta/description
@@ -1,1 +1,4 @@
-Smeagol is a server that can run a read-only version of a Gollum wiki.
+Smeagol is a customizable read-only Gollum wiki server.
+This can be useful when you want to maintain a standalone website,
+but you want to update it through the Gollum wiki interface,
+e.g. via GitHub.
