--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 ---
 script: "bundle exec rubytest -Itest -Ilib test/test*"
+bundler_args: --without compiled
 rvm:
   - 1.8.7
-  - 1.9.2
   - 1.9.3
   - 2.0.0
   #- rbx-18mode
-  #- rbx-19mode
+  - rbx-19mode
   #- jruby-18mode
-  #- jruby-19mode
+  - jruby-19mode
+
+
 
