Update travis config. [test]

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ rvm:
   - 1.9.3
   - 2.0.0
   - rbx-19mode
-  #- jruby-19mode
-
+  - jruby-19mode
+notifications:
+  recipients:
+    - transfire@gmail.com
+matrix:
+  allow_failures:
+    - rvm: jruby-19mode
 
 
